# cheri-benchplot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  HACKING.md  Makefile  README.md  benchplot-cli.py  benchplot-daemon.py  benchplot-gui.py  benchplot.py  conftest.py  demo.analysis.json  demo.json  make.bat  pyproject.toml  pytest.ini  requirements.txt  setup-venv.sh  setup.py
benchmarks/: cheri-benchplot-sample.json
cheri_trace_processor/: cheri_trace_processor.py  gen_protoc_sources.sh  protobuf_backend_entry_pb2.py  qemu_log_entry_pb2.py
demo/: base_daemon.json  plot_config.json  preload_daemon.json  runner.json  runner.json.sample  user_config.json
demo/demo-netperf-multi-instance/: benchplot-run.json  benchplot_config.json
demo/demo-netperf-short/: benchplot-run.json  test_netperf_short.json
demo/demo-netperf-single/: benchplot-run.json  test_netperf_single.json
demo/demo-netperf-single-instance/: benchplot_config.json
docs/: conf.py  index.rst  modules.rst
extra_files/: freebsd_advisories.csv  freebsd_advisories_unmitigated.csv  freebsd_test_id_rsa  freebsd_test_id_rsa.pub  sshd_config
git-hooks/: format  pre-commit  pre-push
old-pipelines/c18n/: c18n-ktrace.json  c18n-test.json
old-pipelines/dasa/: dasa-qps-async-pmc.json  dasa-qps-async.json  dasa-wrk.json  dasa_cloc.json  dasa_cloc_split_tests.json
old-pipelines/grpc/: grpc-qps-async-norevoke.json  grpc-qps-async.json  grpc-qps-ping-pong.json  grpc-qps-sync-ping-pong.json  qps-async-pmc-cnt2-aarch64b.json  qps-async-pmc-cnt3-aarch64b.json
old-pipelines/wrk/: wrk-morello.json
pipelines/c18n/: c18n-ktrace.json  nginx-test.json
pipelines/dasa/: dasa-qps-async-c18n.json  dasa-wrk-c18n.json  dasa_cloc.json  metrics.csv
pipelines/dissertation/: cheribsd-kernel-cloc-test.json  cheribsd-kernel-cloc.json  cheribsd-kernel-subobject.json  cheribsd-kernel-vuln.json  iperf-mss.json  iperf-nodelay.json  iperf-test.json  iperf-udp.json  iperf.json  kernel-subobject.json  unixbench-pmc.json  unixbench.json
pipelines/grpc/: qps-async-pmc-cnt-aarch64b.json  qps-async-pmc-cnt-nohybrid.json  qps-async-pmc-cnt.json  qps-async-pmc-cnt2-nohybrid.json  qps-async-pmc-cnt2.json  qps-async-pmc-stacks.json
pipelines/wrk/: wrk-morello-norevoke.json
pycheribenchplot/: __init__.py  benchplot_cli.py  benchplot_gui.py  elf.py  pmc.py  qemu_stats.py
pycheribenchplot/analysis/: __init__.py  uma_vm_pgcache_anomaly.py
pycheribenchplot/c18n/: __init__.py  _task.py  c18n_plot.py  c18n_trace.py  gui.py  model.py  task.py
pycheribenchplot/cloc/: __init__.py  cdb.py  cheribsd.py  cloc-old.py  cloc.py  cloc_exec.py  cloc_generic.py  model.py
pycheribenchplot/compile_db/: __init__.py  analysis.py  cheribuild.py  model.py  task.py
pycheribenchplot/core/: analysis.py  artefact.py  benchmark.py  borg.py  config.py  cpu.py  csv.py  dataset.py  dwarf.py  dwarf_old.py  elf.py  error.py  excel.py  gui.py  html.py  instance.py  instanced.py  json.py  manager.py  matplotlib.py  model.py  options.py  pandas_util.py  perfetto.py  pidmap.py  pipeline.py  plot.py  plot_chain.py  plot_grid.py  plot_util.py  procstat.py  scheduler.py  session.py  shellgen.py  task.py  tool.py  tvrs.py  util.py
pycheribenchplot/drcachesim/: analysis.py  plot.py
pycheribenchplot/ext/: CMakeLists.txt  __init__.py  dwarf.cc  dwarf.h  pychericap.cc  pydwarf.cc  test.cc
pycheribenchplot/ext/pychericap/: CMakeLists.txt  __init__.py  pychericap.cc
pycheribenchplot/ext/pydwarf/: CMakeLists.txt  __init__.py  dwarf.cc  dwarf.h  dwarf_base_test.cc  dwarf_scraper.cc  dwarf_type_layout.cc  dwarf_type_layout.h  log.cc  log.hh  pool.hh  pydwarf.cc  scraper.cc  scraper.hh  storage.cc  storage.hh  struct_layout_scraper.cc  struct_layout_scraper.hh
pycheribenchplot/generic/: __init__.py  sysctl.py  task.py  timing.py
pycheribenchplot/iperf/: __init__.py  gen-scenarios.py  iperf_exec.py  summary.py
pycheribenchplot/kernel_advisories/: __init__.py  analysis.py  ingest.py
pycheribenchplot/kernel_build/: __init__.py  analysis.py  build_exec.py
pycheribenchplot/kernel_history/: __init__.py  analysis.py  cdb.py  cheribsd_annotations.py  cheribsd_build.py  cheribsd_cloc.py  model.py
pycheribenchplot/kernel_static/: __init__.py  cheribsd.py  cheribsd_subobject.py  dataset.py  model.py  plot.py
pycheribenchplot/kernel_vuln/: analysis.py  model.py
pycheribenchplot/netperf/: __init__.py  analysis.py  benchmark.py  config.py  dataset.py  driver.py  model.py  netperf_exec.py  plot.py  summary.py  task.py
pycheribenchplot/netstat/: dataset.py
pycheribenchplot/nginx/: __init__.py  analyse.py  ingest.py  nginx_exec.py
pycheribenchplot/pmc/: __init__.py  analysis.py  counters.py  dataset.py  ingest.py  plot.py  pmc_exec.py  stacks.py
pycheribenchplot/qemu/: analysis.py  cheribsd_counters.py  cheribsd_counters_plot.py  dataset.py  plot.py  task.py
pycheribenchplot/qps/: __init__.py  _analyse.py  analyse.py  ingest.py  qps_exec.py  qps_plot.py
pycheribenchplot/spec/: dataset.py
pycheribenchplot/subobject/: __init__.py  _imprecise_subobject.py  _llvm_static.py  analysis.py  dataset.py  (+8 more)
tests/: conftest.py  freebsd_id_rsa  freebsd_id_rsa.pub  runner.json  runner.json.sample  test_analysis_load.py  test_analysis_overhead.py  test_analysis_param_aggregate.py  test_artefact.py  test_barplot.py  test_benchmark_exec.py  test_borg.py  test_config.py  test_dataframe.py  test_dataset.py  test_dataset_utils.py  test_dwarf.py  test_dwarf_scraper.py  test_instance.py  test_kern_changes.py  test_kernel_static.py  test_matplotlib.py  test_model.py  test_netperf.py  test_netperf_short.json  test_plot.py  test_plot_coords.py  test_pmc.py  test_qemu_tracing.py  test_scheduler.py  test_session.py  test_shellgen.py  test_subobject.py  test_task.py  test_workloads.py
tools/: CMakeLists.txt  count-subobject-bounds-annotations.py  qemu-trace-counter-diff.py  qemu-trace-counter.py
tools/pychericap/: CMakeLists.txt  README.md  pyproject.toml
tools/qemu-trace-parser/: CMakeLists.txt  memcount.cc  memcount.hh  parser.cc  parser.hh  pool.hh  qemu_log_entry.proto
(+5518 files in other folders)
