[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pycheribenchplot"
description = "Benchmark execution and analysis framework for CHERI projects"
license = "BSD-2-clause"
version = "1.3"
requires-python = ">=3.12"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
authors = [{ name = "Alfredo Mazzinghi",  email = "alfredo.mazzinghi@cl.cam.ac.uk" }]

dependencies = [
	"paramiko>=3.2.0",
	"marshmallow-dataclass[enum,union]>=8.5.8",
	"marshmallow-enum>=1.5.1",
	"isort>=5.10.0",
	"matplotlib>=3.4.3",
	"numpy>=1.21.3",
	"networkx>=2.8.5",
	"openpyxl>=3.0.9",
	"pandas>=1.3.4",
	"pandera>=0.15.1",
	"pyelftools>=0.27",
	"PyPika>=0.48.8",
	"sortedcontainers>=2.4.0",
	"seaborn>=0.12",
	"squarify>=0.4.3",
	"tabulate>=0.9",
	"termcolor>=1.1.0",
	"XlsxWriter>=3.0.2",
	"gitpython>=3.1.27",
	"typing_inspect>=0.5.0",
	"typing_extensions>=4.7.0",
	"pyserial>=3.5",
	"hypothesis>=6.81.0",
	"cxxfilt>=0.3.0",
	"pyqt6>=6.5.1",
	"jinja2>=3.1.2",
	"polars",
	"sqlalchemy",
	"sqlalchemy_utils",
]

[project.optional-dependencies]
dev = [
	"pre-commit",
    "pytest",
	"pytest-mock",
	"pytest-timeout",
	"sphinx",
	"sphinx-rtd-theme",
]

[project.scripts]
benchplot-cli = "pycheribenchplot.benchplot_cli:main"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["old-tests"]
